tests/miz/fail/types/fail_type_elaboration_imported_non_empty_attribute_assertion_formula_gap_001.miz
import parser.type_fixtures;
theorem ImportedNonEmptyAttributeAssertionPayloadBoundary: 1 is non empty;
